# compressa-perf

./: .gitignore  LICENSE  README.md  compressa-perf-db.sqlite  compressa-perf.db  docker-compose.yaml  example.yaml  fail.yaml  perf.yaml  pyproject.toml
.github/workflows/: build.yml  release.yml
notebooks/: debug.ipynb
resources/: config.yml  experiments.yml  prompts.csv  qwen-72b.yml
results/: experiment_07.07.2025.md  experiment_experiment_parameters_09.07.2025.md  experiment_metrics_09.07.2025.md  experiment_model_info_09.07.2025.md
src/compressa/: utils.py
src/compressa/db/: __main__.py
src/compressa/perf/: __main__.py  inference.py
src/compressa/perf/cli/: __main__.py  pdf_tools.py  tools.py
src/compressa/perf/data/: __init__.py  inference.py  metric.py  models.py
src/compressa/perf/db/: __init__.py  __main__.py  create.py  db_inserts.py  operations.py  read.py  setup.py  write.py  writer.py
src/compressa/perf/experiment/: analysis.py  chain_client.py  config.py  continuous_stress.py  inference.py
tests/: compressa-perf.db  test_analysis.py  test_data.py  test_db.py  test_inference.py
