[tool.poetry]
name = "compressa-perf"
version = "0.1.0"
description = "Performance Measurement tool by Compresss"
authors = ["Gleb Morgachev <morgachev.g@gmail.com>"]
readme = "README.md"
packages = [{include = "compressa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
black = "^24.8.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"